# x-algorithm

./: .gitignore  CLAUDE.md  README.md  SIMULATOR.md  agents.md  docker-compose.yml
.github/workflows/: e2e.yml
config/: scoring.toml
docs/: CALIBRATION.md  PRODUCTION_ALIGNMENT_PLAN.md
docs/videos/xalgo_explainer_video/: VIDEO_SCRIPT.md  package-lock.json  package.json  tailwind.config.js
docs/videos/xalgo_explainer_video/src/: Root.tsx  XAlgoExplainer.tsx
docs/videos/xalgo_explainer_video/src/components/: AnimatedText.tsx  Counter.tsx  DataStream.tsx  Icons.tsx  Pipeline.tsx  PostCard.tsx  XLogo.tsx
docs/videos/xalgo_explainer_video/src/scenes/: Scene10Recap.tsx  Scene11Outro.tsx  Scene1Hook.tsx  Scene2BigPicture.tsx  Scene3Request.tsx  Scene4Thunder.tsx  Scene5Phoenix.tsx  Scene6Filtering.tsx  Scene7Scoring.tsx  Scene8WeightedScoring.tsx  (+1 more)
phoenix/: Dockerfile  pyproject.toml
phoenix/service/: __init__.py  inference.py  schema.py  server.py
scripts/: dev.sh  e2e.sh
simulator/: .env.example  Cargo.toml  Dockerfile  README.md
simulator/data/: user_profiles.json
simulator/src/: api.rs  config.rs  lib.rs  llm.rs  main.rs  phoenix_client.rs  server.rs  snapshots.rs  x_api.rs
simulator/src/calibration/: mod.rs  runner.rs  tuning.rs
simulator/src/scoring/: diversity.rs  mod.rs  oon.rs  pipeline.rs  weighted.rs
simulator/src/user/: mod.rs  profile.rs  synthetic.rs
simulator/tests/: scoring_pipeline.rs
webapp/: Dockerfile  README.md  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css
webapp/src/: App.tsx  styles.css
